--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.0.1",
   "author": "Jeremy 'Jermbo' Lawson",
   "description": "We should have an app for our hackathons for judges.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jermbo/Judge-a-thon.git"
   },
   "keywords": [],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.7",
+    "pusher": "^2.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
+  }
 }
