--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "judge-a-thon",
-  "version": "0.0.1",
-  "author": "Jeremy 'Jermbo' Lawson",
+  "version": "1.0.0",
   "description": "We should have an app for our hackathons for judges.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "./node_modules/.bin/gulp __start-local__"
+    "dev": "./node_modules/.bin/gulp __start-local__",
+    "scripts": "./node_modules/.bin/gulp scripts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jermbo/Judge-a-thon.git"
   },
-  "keywords": [],
+  "author": "Jeremy 'Jermbo' Lawson",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -23,25 +23,24 @@
     "pusher": "^2.1.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.6",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/register": "^7.0.0",
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
-    "gulp": "^3.9.1",
+    "eslint": "^5.9.0",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-changed": "^3.2.0",
-    "gulp-eslint": "^4.0.2",
-    "gulp-jsbeautifier": "^2.1.2",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-nodemon": "^2.4.2",
     "gulp-notify": "^3.2.0",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-plumber": "^1.2.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-task-listing": "^1.0.1",
-    "run-sequence": "^2.2.1",
-    "yargs": "^11.0.0"
+    "yargs": "^11.1.0"
   }
 }
